register and login - without secret

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ NODE_ENV = development
 PORT = 4000
 
 DATABASE_URL = mongodb://127.0.0.1:27017/perfect_fit_app
+
+ACCESS_TOKEN_SECRET = 123456
+JWT_TOKEN_EXPIRATION = '30s'
