--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.4"
+    "minimist": "^1.2.6",
+    "mongoose": "^6.2.4",
+    "nth-check": "^2.0.1"
   },
   "devDependencies": {
     "jest": "^27.5.1",
