--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,6 +12,7 @@
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
+    "recharts": "^2.1.9",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
