--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "proxy": "http://localhost:4000/",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.6.0",
+    "@mui/x-data-grid": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
