--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "minimist": "^1.2.6",
     "mongoose": "^6.2.4",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.5",
     "nth-check": "^2.0.1"
   },
   "devDependencies": {
